tests/snapshots/snapshot_tests__array_hybr_sum.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark (& path)
---
BenchmarkResult {
    example_name: "examples/array/array_hybr_sum.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 0 0) 0) 0)",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) i+0) i+0)",
        "(=> (not (= 1 0)) (= (Read_Int_Int (Write_Int_Int a+0 0 0) 1) (Read_Int_Int a+0 1)))",
        "(=> (not (= 2 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) 2) (Read_Int_Int a+0 2)))",
        "(=> (not (= N i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) N) (Read_Int_Int a+0 N)))",
        "(=> (not (= i+0 i+1)) (= (Read_Int_Int (Write_Int_Int a+1 i+1 i+1) i+0) (Read_Int_Int a+1 i+0)))",
        "(=> (not (= i+1 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) i+1) (Read_Int_Int a+0 i+1)))",
        "(=> (not (= i+2 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) i+2) (Read_Int_Int a+0 i+2)))",
        "(=> (not (= i+3 0)) (= (Read_Int_Int (Write_Int_Int a+0 0 0) i+3) (Read_Int_Int a+0 i+3)))",
        "(=> (not (= i+3 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) i+3) (Read_Int_Int a+0 i+3)))",
    ],
}
