tests/snapshots/snapshot_tests__array_index_compl.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_index_compl.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 (+ i+0 1) (+ 1 (Read_Int_Int a+0 i+0))) (+ i+0 1)) (+ 1 (Read_Int_Int a+0 i+0)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 0 1) 0) 1)",
    ],
}
