tests/snapshots/snapshot_tests__array_init_addvar5.snap
---
source: tests/snapshot_tests.rs
assertion_line: 753
expression: run_benchmark (& path)
---
BenchmarkResult {
    example_name: "examples/array/array_init_addvar5.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (Read_Int_Int a+0 i+0) j+0)) i+0) (+ (Read_Int_Int a+0 i+0) j+0))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 j+0) i+0) j+0)",
        "(=> (not (= 0 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 j+0) 0) (Read_Int_Int a+0 0)))",
        "(=> (not (= N i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 j+0) N) (Read_Int_Int a+0 N)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (Read_Int_Int a+0 i+0) j+0)) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 j+0) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= i+4 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (Read_Int_Int a+0 i+0) j+0)) i+4) (Read_Int_Int a+0 i+4)))",
    ],
}
