tests/snapshots/snapshot_tests__array_init_and_copy_inverse.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_init_and_copy_inverse.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) i+0) i+0)",
        "(= (Read_Int_Int (Write_Int_Int b+0 0 8) 0) 8)",
        "(= (Read_Int_Int (Write_Int_Int b+0 Z 10) Z) 10)",
        "(= (Read_Int_Int (Write_Int_Int b+0 Z Z) Z) Z)",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 (- N (+ i+0 1)))) i+0) (Read_Int_Int a+0 (- N (+ i+0 1))))",
        "(=> (not (= (- N (+ i+1 1)) N)) (= (Read_Int_Int (Write_Int_Int b+0 N 5) (- N (+ i+1 1))) (Read_Int_Int b+0 (- N (+ i+1 1)))))",
        "(=> (not (= (- N (+ i+1 1)) Z)) (= (Read_Int_Int (Write_Int_Int b+0 Z 10) (- N (+ i+1 1))) (Read_Int_Int b+0 (- N (+ i+1 1)))))",
        "(=> (not (= (- N (+ i+1 1)) i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) (- N (+ i+1 1))) (Read_Int_Int a+0 (- N (+ i+1 1)))))",
        "(=> (not (= (- N (+ i+2 1)) 0)) (= (Read_Int_Int (Write_Int_Int b+0 0 8) (- N (+ i+2 1))) (Read_Int_Int b+0 (- N (+ i+2 1)))))",
        "(=> (not (= (- N (+ i+2 1)) i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) (- N (+ i+2 1))) (Read_Int_Int a+0 (- N (+ i+2 1)))))",
        "(=> (not (= (- N (+ i+2 1)) i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 (- N (+ i+0 1)))) (- N (+ i+2 1))) (Read_Int_Int b+0 (- N (+ i+2 1)))))",
        "(=> (not (= (- N (+ i+3 1)) i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) (- N (+ i+3 1))) (Read_Int_Int a+0 (- N (+ i+3 1)))))",
        "(=> (not (= (- N (+ i+3 1)) i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 (- N (+ i+0 1)))) (- N (+ i+3 1))) (Read_Int_Int b+0 (- N (+ i+3 1)))))",
        "(=> (not (= (- N (+ i+4 1)) i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) (- N (+ i+4 1))) (Read_Int_Int a+0 (- N (+ i+4 1)))))",
        "(=> (not (= (- N Z) i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) (- N Z)) (Read_Int_Int a+0 (- N Z))))",
        "(=> (not (= 0 i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 (- N (+ i+0 1)))) 0) (Read_Int_Int b+0 0)))",
        "(=> (not (= 1 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) 1) (Read_Int_Int a+0 1)))",
        "(=> (not (= 1 i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 (- N (+ i+0 1)))) 1) (Read_Int_Int b+0 1)))",
        "(=> (not (= 2 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) 2) (Read_Int_Int a+0 2)))",
        "(=> (not (= 2 i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 (- N (+ i+0 1)))) 2) (Read_Int_Int b+0 2)))",
        "(=> (not (= N i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) N) (Read_Int_Int a+0 N)))",
        "(=> (not (= Z N)) (= (Read_Int_Int (Write_Int_Int b+0 N 5) Z) (Read_Int_Int b+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 (- N (+ i+0 1)))) Z) (Read_Int_Int b+0 Z)))",
        "(=> (not (= i+2 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) i+2) (Read_Int_Int a+0 i+2)))",
        "(=> (not (= i+3 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) i+3) (Read_Int_Int a+0 i+3)))",
    ],
}
