tests/snapshots/snapshot_tests__array_init_batches.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark (& path)
---
BenchmarkResult {
    example_name: "examples/array/array_init_batches.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+0 0 0) 1 i+0) 1) i+0)",
        "(= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+0 0 0) Z 0) Z) 0)",
        "(= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 0) (+ i+0 1) 0) (+ i+0 1)) 0)",
        "(= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+1 2 0) Z i+0) Z) i+0)",
        "(= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+1 Z 0) Z i+0) Z) i+0)",
        "(= (Read_Int_Int (Write_Int_Int a+0 2 0) 2) 0)",
        "(= (Read_Int_Int (Write_Int_Int a+0 Z 0) Z) 0)",
        "(=> (not (= (+ i+0 1) (+ Z Z))) (= (Read_Int_Int (Write_Int_Int a+1 (+ Z Z) 0) (+ i+0 1)) (Read_Int_Int a+1 (+ i+0 1))))",
        "(=> (not (= (+ i+0 1) (+ i+2 1))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+2 Z 0) (+ i+2 1) i+0) (+ i+0 1)) (Read_Int_Int (Write_Int_Int a+2 Z 0) (+ i+0 1))))",
        "(=> (not (= (+ i+0 1) Z)) (= (Read_Int_Int (Write_Int_Int a+2 Z 0) (+ i+0 1)) (Read_Int_Int a+2 (+ i+0 1))))",
        "(=> (not (= (+ i+0 1) i+1)) (= (Read_Int_Int (Write_Int_Int a+1 i+1 0) (+ i+0 1)) (Read_Int_Int a+1 (+ i+0 1))))",
        "(=> (not (= (+ i+0 1) i+2)) (= (Read_Int_Int (Write_Int_Int a+2 i+2 0) (+ i+0 1)) (Read_Int_Int a+2 (+ i+0 1))))",
        "(=> (not (= (+ i+0 1) i+3)) (= (Read_Int_Int (Write_Int_Int a+3 i+3 0) (+ i+0 1)) (Read_Int_Int a+3 (+ i+0 1))))",
        "(=> (not (= (+ i+1 1) (+ i+2 1))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+2 (+ Z Z) 0) (+ i+2 1) i+0) (+ i+1 1)) (Read_Int_Int (Write_Int_Int a+2 (+ Z Z) 0) (+ i+1 1))))",
        "(=> (not (= (+ i+1 1) N)) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+2 (+ Z Z) 0) N i+0) (+ i+1 1)) (Read_Int_Int (Write_Int_Int a+2 (+ Z Z) 0) (+ i+1 1))))",
        "(=> (not (= 1 (+ i+0 1))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 0) (+ i+0 1) 0) 1) (Read_Int_Int (Write_Int_Int a+0 i+0 0) 1)))",
        "(=> (not (= 1 (+ i+1 1))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+1 2 0) (+ i+1 1) i+0) 1) (Read_Int_Int (Write_Int_Int a+1 2 0) 1)))",
        "(=> (not (= 1 0)) (= (Read_Int_Int (Write_Int_Int a+0 0 0) 1) (Read_Int_Int a+0 1)))",
        "(=> (not (= 1 2)) (= (Read_Int_Int (Write_Int_Int a+0 2 0) 1) (Read_Int_Int a+0 1)))",
        "(=> (not (= 1 Z)) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+1 Z 0) Z i+0) 1) (Read_Int_Int (Write_Int_Int a+1 Z 0) 1)))",
        "(=> (not (= 1 Z)) (= (Read_Int_Int (Write_Int_Int a+0 Z 0) 1) (Read_Int_Int a+0 1)))",
        "(=> (not (= Z (+ Z Z))) (= (Read_Int_Int (Write_Int_Int a+0 (+ Z Z) 0) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z (+ i+0 1))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 0) (+ i+0 1) 0) Z) (Read_Int_Int (Write_Int_Int a+0 i+0 0) Z)))",
        "(=> (not (= Z (+ i+1 1))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+1 2 0) (+ i+1 1) i+0) Z) (Read_Int_Int (Write_Int_Int a+1 2 0) Z)))",
        "(=> (not (= Z (+ i+1 1))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+1 Z 0) (+ i+1 1) i+0) Z) (Read_Int_Int (Write_Int_Int a+1 Z 0) Z)))",
        "(=> (not (= Z (+ i+2 1))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+2 (+ Z Z) 0) (+ i+2 1) i+0) Z) (Read_Int_Int (Write_Int_Int a+2 (+ Z Z) 0) Z)))",
        "(=> (not (= Z (+ i+2 1))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+2 Z 0) (+ i+2 1) i+0) Z) (Read_Int_Int (Write_Int_Int a+2 Z 0) Z)))",
        "(=> (not (= Z 0)) (= (Read_Int_Int (Write_Int_Int a+0 0 0) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z 1)) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+0 0 0) 1 i+0) Z) (Read_Int_Int (Write_Int_Int a+0 0 0) Z)))",
        "(=> (not (= Z 2)) (= (Read_Int_Int (Write_Int_Int a+0 2 0) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z N)) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+0 2 0) N 0) Z) (Read_Int_Int (Write_Int_Int a+0 2 0) Z)))",
        "(=> (not (= Z N)) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+2 (+ Z Z) 0) N i+0) Z) (Read_Int_Int (Write_Int_Int a+2 (+ Z Z) 0) Z)))",
        "(=> (not (= Z N)) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+2 Z 0) N i+0) Z) (Read_Int_Int (Write_Int_Int a+2 Z 0) Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 0) Z) (Read_Int_Int a+0 Z)))",
    ],
}
